syntax = "proto3";

package uptime;

option go_package = "v1/proto";

import "google/protobuf/timestamp.proto";

message UptimeRequest {
	string proxy_server = 1;
	google.protobuf.Timestamp sent_time = 2;
	string ipv4 = 3;
}

message UptimeResponse {
	string proxy_server = 1;
	google.protobuf.Timestamp sent_time = 2;
	string ipv4 = 3;
}

service UptimeService {
	rpc SendCollectedData (UptimeRequest) returns (UptimeResponse);
}